// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET - http://localhost:5000/auth/basic 1`] = `
Object {
  "body": "OK",
  "description": "",
  "headers": Object {
    "connection": "close",
    "content-length": "2",
    "content-type": "text/plain; charset=utf-8",
  },
  "statusCode": 200,
}
`;

exports[`GET - http://localhost:5000/auth/bearer 1`] = `
Object {
  "body": "OK",
  "description": "",
  "headers": Object {
    "connection": "close",
    "content-length": "2",
    "content-type": "text/plain; charset=utf-8",
  },
  "statusCode": 200,
}
`;

exports[`GET - http://localhost:5000/auth/digest 1`] = `
Object {
  "body": "OK",
  "description": "",
  "headers": Object {
    "connection": "close",
    "content-length": "2",
    "content-type": "text/plain; charset=utf-8",
  },
  "statusCode": 200,
}
`;

exports[`GET - http://localhost:5000/auth/hawk 1`] = `
Object {
  "body": "OK",
  "description": "",
  "headers": Object {
    "connection": "close",
    "content-length": "2",
    "content-type": "text/plain; charset=utf-8",
  },
  "statusCode": 200,
}
`;

exports[`GET - http://localhost:5000/misc/documentation 1`] = `
Object {
  "body": "OK",
  "description": "Tu crois que c'est du respect mon garçon ?",
  "headers": Object {
    "connection": "close",
    "content-length": "2",
    "content-type": "text/plain; charset=utf-8",
  },
  "statusCode": 200,
}
`;

exports[`GET - http://localhost:5000/misc/headers 1`] = `
Object {
  "body": "Created",
  "description": "",
  "headers": Object {
    "accept-encoding": "gzip, deflate",
    "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.e30.sr08LEMNntsBjm8vu8Xv1ciDBmKZUv-dRKiO2efI7KI",
    "connection": "close",
    "content-length": "7",
    "content-type": "text/plain; charset=utf-8",
    "host": "localhost:5000",
    "issou": "la chancla",
    "jean": "smaug",
  },
  "statusCode": 201,
}
`;

exports[`GET - http://localhost:5000/misc/query-params 1`] = `
Object {
  "body": "OK",
  "description": "",
  "headers": Object {
    "connection": "close",
    "content-length": "2",
    "content-type": "text/plain; charset=utf-8",
  },
  "statusCode": 200,
}
`;

exports[`POST - http://localhost:4000 1`] = `
Object {
  "body": Object {
    "data": Object {
      "books": Array [
        Object {
          "title": "Harry Potter and the Chamber of Secrets",
        },
        Object {
          "title": "Jurassic Park",
        },
      ],
    },
  },
  "description": "",
  "headers": Object {
    "access-control-allow-origin": "*",
    "connection": "close",
    "content-length": "99",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"63-rqKuwXrbApDAKA6SS5Pb8FfTZUI\\"",
    "x-powered-by": "Express",
  },
  "statusCode": 200,
}
`;

exports[`POST - http://localhost:5000/body/edn 1`] = `
Object {
  "body": "",
  "description": "",
  "headers": Object {
    "connection": "close",
  },
  "statusCode": 204,
}
`;

exports[`POST - http://localhost:5000/body/form-url-encoded 1`] = `
Object {
  "body": Object {},
  "description": "",
  "headers": Object {
    "connection": "close",
    "content-length": "2",
    "content-type": "application/json; charset=utf-8",
  },
  "statusCode": 200,
}
`;

exports[`POST - http://localhost:5000/body/json 1`] = `
Object {
  "body": Object {
    "jean": "smaug",
  },
  "description": "",
  "headers": Object {
    "connection": "close",
    "content-length": "16",
    "content-type": "application/json; charset=utf-8",
  },
  "statusCode": 200,
}
`;

exports[`POST - http://localhost:5000/body/multipart-form 1`] = `
Object {
  "body": "",
  "description": "",
  "headers": Object {
    "connection": "close",
  },
  "statusCode": 204,
}
`;

exports[`POST - http://localhost:5000/body/xml 1`] = `
Object {
  "body": "",
  "description": "",
  "headers": Object {
    "connection": "close",
  },
  "statusCode": 204,
}
`;

exports[`POST - http://localhost:5000/body/yaml 1`] = `
Object {
  "body": "",
  "description": "",
  "headers": Object {
    "connection": "close",
  },
  "statusCode": 204,
}
`;
